# utils

./: CMakeLists.txt  LICENSE  README.md  VERSION  git-auto-tag  git-tag.sh  git_tag.sh  server.go
.github/workflows/: cmake-single-platform.yml
gtgo/gtgo.xcframework/: Info.plist
gtgo/gtgo.xcframework/ios-arm64/Headers/: gtgo.h
include/: utils.h
src/: utils.c
tests/: test_utils.c
